tests/invalidTest/other/FuncNoVoid_with_noTotalRet.q
# EXPECT non-void function needs return
def sint64 loseRet() {
  if 1 > 0
  then return 1
}
